--- a/trunk/MAC/APL/PAC/BeamServer/configure.in
+++ b/trunk/MAC/APL/PAC/BeamServer/configure.in
@@ -53,9 +53,11 @@ dnl
 lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
+
 dnl lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,)
 lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,,)
 lofar_EXTERNAL(common,1,Common/LofarTypes.h,,)
+lofar_EXTERNAL(BLITZ,1,blitz/blitz.h,,/usr/local/blitz++,,'gnu3:-Wno-unused gnu3:-ftemplate-depth-30',,-lm)
 
 dnl
 dnl Output Makefiles
