--- a/MAC/APL/PAC/BeamServer/configure.in
+++ b/MAC/APL/PAC/BeamServer/configure.in
@@ -57,7 +57,7 @@ lofar_DOCXX
 dnl lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,)
 lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,,)
 lofar_EXTERNAL(common,1,Common/LofarTypes.h,,)
-lofar_EXTERNAL(BLITZ,1,blitz/blitz.h,,/usr/local/blitz++,,'gnu3:-Wno-unused gnu3:-ftemplate-depth-30',,-lm)
+lofar_EXTERNAL(BLITZ,1,blitz/blitz.h,,,,'gnu3:-Wno-unused gnu3:-ftemplate-depth-30',,-lm)
 
 dnl
 dnl Output Makefiles
