--- a/trunk/CEP/Transport/test/Makefile.am
+++ b/trunk/CEP/Transport/test/Makefile.am
@@ -1,8 +1,6 @@
 common_top_builddir=@common_top_builddir@
 
 CFLAGS += \
-	-DUSE_PUBLIC_MALLOC_WRAPPERS \
-	-DUSE_DL_PREFIX \
 	-DHAVE_MMAP=0 \
 	-DMORECORE=shmbrk \
 	-DMORECORE_CONTIGUOUS=0 \
@@ -10,21 +8,21 @@ CFLAGS += \
 	-DSHMEM_ALLOC
 
 CXXFLAGS += \
-	-DUSE_PUBLIC_MALLOC_WRAPPERS \
-	-DUSE_DL_PREFIX \
 	-DHAVE_MMAP=0 \
 	-DMORECORE=shmbrk \
 	-DMORECORE_CONTIGUOUS=0 \
 	-DMORECORE_CANNOT_TRIM=1 \
 	-DSHMEM_ALLOC
 
-check_PROGRAMS			= Example ExamplePL ExamplePL2
+check_PROGRAMS			= Example ExamplePL ExamplePL2 ExampleShMem
 
 Example_SOURCES 		= Example.cc DH_Example.cc
 
 ExamplePL_SOURCES 		= ExamplePL.cc DH_Example.cc
 
 ExamplePL2_SOURCES 		= ExamplePL2.cc DH_Example2.cc
+
+ExampleShMem_SOURCES 		= ExampleShMem.cc DH_Example.cc
 
 LDADD				= ../src/libtransport.la 
 DEPENDENCIES			= ../src/libtransport.la $(LOFAR_DEPEND)
@@ -39,7 +37,8 @@ TESTS_ENVIRONMENT		= top_srcdir=$(top_srcdir) \
 TESTS	=					\
 	Example_test.sh				\
 	ExamplePL_test.sh			\
-	ExamplePL2_test.sh			
+	ExamplePL2_test.sh			\
+	ExampleShMem_test.sh			
 
 
 include $(lofar_sharedir)/Makefile.common
