--- a/trunk/CEP/Transport/src/Makefile.am
+++ b/trunk/CEP/Transport/src/Makefile.am
@@ -11,6 +11,7 @@ BaseSim.h \
 Connection.h \
 CyclicBuffer.h \
 DataHolder.h \
+Socket.h \
 DH_PL.h \
 ParamHolder.h \
 PO_DH_PL.h \
@@ -20,6 +21,7 @@ TH_Mem.h \
 TH_MPI.h \
 TH_PL.h \
 TH_ShMem.h \
+TH_Socket.h \
 Transporter.h \
 TransportHolder.h 
 
@@ -41,6 +43,7 @@ BaseDataHolder.cc \
 Connection.cc \
 CyclicBuffer.cc \
 DataHolder.cc \
+Socket.cc \
 DH_PL.cc \
 ParamHolder.cc \
 PO_DH_PL.cc \
@@ -50,6 +53,7 @@ TH_Mem.cc \
 TH_MPI.cc \
 TH_PL.cc \
 TH_ShMem.cc \
+TH_Socket.cc \
 Transporter.cc \
 TransportHolder.cc 
 
