--- a/trunk/CEP/Transport/test/Makefile.am
+++ b/trunk/CEP/Transport/test/Makefile.am
@@ -14,7 +14,7 @@ CXXFLAGS += \
 	-DMORECORE_CANNOT_TRIM=1 \
 	-DSHMEM_ALLOC
 
-check_PROGRAMS			= Example ExamplePL ExamplePL2 ExampleShMem
+check_PROGRAMS			= Example ExamplePL ExamplePL2 ExampleShMem ExampleSocket
 
 Example_SOURCES 		= Example.cc DH_Example.cc
 
@@ -23,6 +23,8 @@ ExamplePL_SOURCES 		= ExamplePL.cc DH_Example.cc
 ExamplePL2_SOURCES 		= ExamplePL2.cc DH_Example2.cc
 
 ExampleShMem_SOURCES 		= ExampleShMem.cc DH_Example.cc
+
+ExampleSocket_SOURCES		= ExampleSocket.cc DH_Example.cc
 
 LDADD				= ../src/libtransport.la 
 DEPENDENCIES			= ../src/libtransport.la $(LOFAR_DEPEND)
@@ -38,7 +40,8 @@ TESTS	=					\
 	Example_test.sh				\
 	ExamplePL_test.sh			\
 	ExamplePL2_test.sh			\
-	ExampleShMem_test.sh			
+	ExampleShMem_test.sh			\
+	ExampleSocket_test.sh
 
 
 include $(lofar_sharedir)/Makefile.common
