--- a/trunk/MAC/Test/PROTO/EventExt/Makefile
+++ b/trunk/MAC/Test/PROTO/EventExt/Makefile
@@ -1,19 +1,26 @@
+
 AUTOGEN = autogen
 SUFFIXES = .ph
+
 %.ph: %.prot
 	$(AUTOGEN) $< && \
 	chmod a+w $@
 
 %_wrap.cc: %.ph
-	swig -c++ -python -shadow -o $@ $<
+	swig -I.-IGCF -c++ -python -shadow -o $@ $<
 
-%.so: %_wrap.o # %.o
-	ld -shared -o $*c.so $^
+_%.so: %_wrap.o
+	g++ -shared -o _$*.so $^
 
-CXXFLAGS=-I/usr/include/python2.2 -g -I.
+CXXFLAGS=-I/usr/include/python2.2 -g -I. -IGCF
 
-all: MY_Protocol.ph ExampleUse MY_Protocol.so 
+all: _pybind.so MY_Protocol.ph ExampleUse _MY_Protocol.so
 
 clean:
-	rm -f *.o *.so *_wrap.* ExampleUse MyProtocol.py *.pyc MY_Protocol.ph
+	rm -f *.o *.so *_wrap.* *.pyc \
+	ExampleUse \
+	MyProtocol.py \
+	MY_Protocol.ph \
+	MY_Protocol.py \
+	pybind.py
 
